--- a/experiments/python-node-optimization/testbed.ipynb
+++ b/experiments/python-node-optimization/testbed.ipynb
@@ -141,7 +141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-11-06 13:10:03,339] A new study created in memory with name: no-name-85c71fe7-cc94-448b-a9a0-46470688fb6b\n"
+      "[I 2024-11-06 13:31:52,764] A new study created in memory with name: no-name-4b9b4940-4128-414d-8733-3236f7935735\n"
      ]
     }
    ],
@@ -166,15 +166,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_config = context.optimization_info.get_inference_nodes_config()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run Inference"
+    "### Run Inference from file system"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autointent.pipeline.inference import InferencePipeline\n",
+    "\n",
+    "inference_pipeline = InferencePipeline.from_config(inference_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inference_pipeline.predict([\"hello world\", \"what is the eagles address\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Inference from context [but from file system]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
