--- a/versions/v0.0.1/.doctrees/nbsphinx/user_guides/user_guides.advanced.02_search_space.ipynb
+++ b/versions/v0.0.1/.doctrees/nbsphinx/user_guides/user_guides.advanced.02_search_space.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "739812f1",
+   "id": "0ca01ebe",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b55c322",
+   "id": "dd364567",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93fdb0f0",
+   "id": "f71a4a5b",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -40,13 +40,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "395ab970",
+   "id": "a92513cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:12:59.610120Z",
-     "iopub.status.busy": "2024-12-18T13:12:59.609636Z",
-     "iopub.status.idle": "2024-12-18T13:12:59.616291Z",
-     "shell.execute_reply": "2024-12-18T13:12:59.615750Z"
+     "iopub.execute_input": "2024-12-18T13:13:13.563412Z",
+     "iopub.status.busy": "2024-12-18T13:13:13.563208Z",
+     "iopub.status.idle": "2024-12-18T13:13:13.569789Z",
+     "shell.execute_reply": "2024-12-18T13:13:13.569294Z"
     }
    },
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb735e24",
+   "id": "abe16699",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -75,13 +75,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "54d195ac",
+   "id": "e8d314ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:12:59.618161Z",
-     "iopub.status.busy": "2024-12-18T13:12:59.617982Z",
-     "iopub.status.idle": "2024-12-18T13:12:59.620720Z",
-     "shell.execute_reply": "2024-12-18T13:12:59.620219Z"
+     "iopub.execute_input": "2024-12-18T13:13:13.571757Z",
+     "iopub.status.busy": "2024-12-18T13:13:13.571409Z",
+     "iopub.status.idle": "2024-12-18T13:13:13.574461Z",
+     "shell.execute_reply": "2024-12-18T13:13:13.573818Z"
     }
    },
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcfccb3",
+   "id": "f69333be",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2acfaccb",
+   "id": "81dc0cb0",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -115,13 +115,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bebcd3b1",
+   "id": "6f1b5258",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:12:59.622718Z",
-     "iopub.status.busy": "2024-12-18T13:12:59.622365Z",
-     "iopub.status.idle": "2024-12-18T13:12:59.625234Z",
-     "shell.execute_reply": "2024-12-18T13:12:59.624702Z"
+     "iopub.execute_input": "2024-12-18T13:13:13.576442Z",
+     "iopub.status.busy": "2024-12-18T13:13:13.576095Z",
+     "iopub.status.idle": "2024-12-18T13:13:13.579245Z",
+     "shell.execute_reply": "2024-12-18T13:13:13.578575Z"
     }
    },
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bcf884",
+   "id": "a6a1c9e4",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -151,13 +151,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "507b70a2",
+   "id": "ad13cfa9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:12:59.627297Z",
-     "iopub.status.busy": "2024-12-18T13:12:59.626976Z",
-     "iopub.status.idle": "2024-12-18T13:12:59.631598Z",
-     "shell.execute_reply": "2024-12-18T13:12:59.631046Z"
+     "iopub.execute_input": "2024-12-18T13:13:13.581533Z",
+     "iopub.status.busy": "2024-12-18T13:13:13.581088Z",
+     "iopub.status.idle": "2024-12-18T13:13:13.585519Z",
+     "shell.execute_reply": "2024-12-18T13:13:13.584979Z"
     }
    },
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf0f932",
+   "id": "1d9fa303",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -210,13 +210,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9f322dad",
+   "id": "2d5a9199",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:12:59.633442Z",
-     "iopub.status.busy": "2024-12-18T13:12:59.633253Z",
-     "iopub.status.idle": "2024-12-18T13:13:04.874256Z",
-     "shell.execute_reply": "2024-12-18T13:13:04.873627Z"
+     "iopub.execute_input": "2024-12-18T13:13:13.587504Z",
+     "iopub.status.busy": "2024-12-18T13:13:13.587138Z",
+     "iopub.status.idle": "2024-12-18T13:13:19.074540Z",
+     "shell.execute_reply": "2024-12-18T13:13:19.073959Z"
     }
    },
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048bd837",
+   "id": "d83d08d1",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -249,13 +249,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e4a9f86",
+   "id": "f014d2a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:13:04.876999Z",
-     "iopub.status.busy": "2024-12-18T13:13:04.876443Z",
-     "iopub.status.idle": "2024-12-18T13:14:27.849301Z",
-     "shell.execute_reply": "2024-12-18T13:14:27.848392Z"
+     "iopub.execute_input": "2024-12-18T13:13:19.076913Z",
+     "iopub.status.busy": "2024-12-18T13:13:19.076585Z",
+     "iopub.status.idle": "2024-12-18T13:14:35.195987Z",
+     "shell.execute_reply": "2024-12-18T13:14:35.195176Z"
     }
    },
    "outputs": [
@@ -296,7 +296,7 @@
     {
      "data": {
       "text/plain": [
-       "<autointent.context._context.Context at 0x7f2344909db0>"
+       "<autointent.context._context.Context at 0x7fc933329bd0>"
       ]
      },
      "execution_count": 6,
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89dc23f4",
+   "id": "e4a31fc1",
    "metadata": {
     "cell_marker": "\"\"\""
    },
