--- a/versions/dev/user_guides/user_guides.advanced.02_search_space.ipynb
+++ b/versions/dev/user_guides/user_guides.advanced.02_search_space.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0675d4e",
+   "id": "a012a4d6",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5203c97d",
+   "id": "70a63280",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa3249f",
+   "id": "062e6e4a",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -40,13 +40,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "44c610fc",
+   "id": "ddcad5ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:19:40.251583Z",
-     "iopub.status.busy": "2024-12-18T13:19:40.251378Z",
-     "iopub.status.idle": "2024-12-18T13:19:40.258029Z",
-     "shell.execute_reply": "2024-12-18T13:19:40.257510Z"
+     "iopub.execute_input": "2024-12-18T13:19:42.287156Z",
+     "iopub.status.busy": "2024-12-18T13:19:42.286659Z",
+     "iopub.status.idle": "2024-12-18T13:19:42.293133Z",
+     "shell.execute_reply": "2024-12-18T13:19:42.292605Z"
     }
    },
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b849638",
+   "id": "0b8aeb1b",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -75,13 +75,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2d9bbe58",
+   "id": "918b8346",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:19:40.260027Z",
-     "iopub.status.busy": "2024-12-18T13:19:40.259675Z",
-     "iopub.status.idle": "2024-12-18T13:19:40.262765Z",
-     "shell.execute_reply": "2024-12-18T13:19:40.262113Z"
+     "iopub.execute_input": "2024-12-18T13:19:42.294948Z",
+     "iopub.status.busy": "2024-12-18T13:19:42.294755Z",
+     "iopub.status.idle": "2024-12-18T13:19:42.297724Z",
+     "shell.execute_reply": "2024-12-18T13:19:42.297200Z"
     }
    },
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6459a88",
+   "id": "df93c033",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fa5fffc",
+   "id": "846bfcae",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -115,13 +115,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a3e87c2",
+   "id": "8f683879",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:19:40.264820Z",
-     "iopub.status.busy": "2024-12-18T13:19:40.264387Z",
-     "iopub.status.idle": "2024-12-18T13:19:40.267418Z",
-     "shell.execute_reply": "2024-12-18T13:19:40.266886Z"
+     "iopub.execute_input": "2024-12-18T13:19:42.299678Z",
+     "iopub.status.busy": "2024-12-18T13:19:42.299488Z",
+     "iopub.status.idle": "2024-12-18T13:19:42.302573Z",
+     "shell.execute_reply": "2024-12-18T13:19:42.302036Z"
     }
    },
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62bfa56b",
+   "id": "0b40e1ce",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -151,13 +151,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8026c805",
+   "id": "0247a257",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:19:40.269574Z",
-     "iopub.status.busy": "2024-12-18T13:19:40.269171Z",
-     "iopub.status.idle": "2024-12-18T13:19:40.273688Z",
-     "shell.execute_reply": "2024-12-18T13:19:40.273155Z"
+     "iopub.execute_input": "2024-12-18T13:19:42.304414Z",
+     "iopub.status.busy": "2024-12-18T13:19:42.304221Z",
+     "iopub.status.idle": "2024-12-18T13:19:42.308866Z",
+     "shell.execute_reply": "2024-12-18T13:19:42.308325Z"
     }
    },
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f60148",
+   "id": "af488f65",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -210,13 +210,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04fd6633",
+   "id": "2517d790",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:19:40.275646Z",
-     "iopub.status.busy": "2024-12-18T13:19:40.275234Z",
-     "iopub.status.idle": "2024-12-18T13:19:45.482236Z",
-     "shell.execute_reply": "2024-12-18T13:19:45.481593Z"
+     "iopub.execute_input": "2024-12-18T13:19:42.310730Z",
+     "iopub.status.busy": "2024-12-18T13:19:42.310539Z",
+     "iopub.status.idle": "2024-12-18T13:19:47.938335Z",
+     "shell.execute_reply": "2024-12-18T13:19:47.937738Z"
     }
    },
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3892c36",
+   "id": "02b1f9ab",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -249,13 +249,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af70f1bd",
+   "id": "05b2fc4d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-18T13:19:45.485040Z",
-     "iopub.status.busy": "2024-12-18T13:19:45.484511Z",
-     "iopub.status.idle": "2024-12-18T13:20:47.030682Z",
-     "shell.execute_reply": "2024-12-18T13:20:47.029712Z"
+     "iopub.execute_input": "2024-12-18T13:19:47.940704Z",
+     "iopub.status.busy": "2024-12-18T13:19:47.940388Z",
+     "iopub.status.idle": "2024-12-18T13:20:51.188520Z",
+     "shell.execute_reply": "2024-12-18T13:20:51.187609Z"
     }
    },
    "outputs": [
@@ -296,7 +296,7 @@
     {
      "data": {
       "text/plain": [
-       "<autointent.context._context.Context at 0x7ff396909ea0>"
+       "<autointent.context._context.Context at 0x7f3238f3a980>"
       ]
      },
      "execution_count": 6,
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06e4c628",
+   "id": "a2de7849",
    "metadata": {
     "cell_marker": "\"\"\""
    },
